use one time prepopulation of secret for vault

--- a/vault/getting-started-demo/deployment.yaml
+++ b/vault/getting-started-demo/deployment.yaml
@@ -23,6 +23,8 @@ spec:
           {{ .Data.data.hello }}
           {{ end }}
         vault.hashicorp.com/agent-inject-token: 'true'
+        # this makes sure the secret vault will only change during pod restart:
+        vault.hashicorp.com/agent-pre-populate-only: 'true'
         vault.hashicorp.com/auth-path: auth/k8s-CLUSTER
         vault.hashicorp.com/namespace: platform-services
         vault.hashicorp.com/role: LICENSE-MOUNT_ENV
