--- a/crunchydb/high-availablility/PostgresCluster.yaml
+++ b/crunchydb/high-availablility/PostgresCluster.yaml
@@ -7,13 +7,14 @@ kind: PostgresCluster
 metadata:
   name: hippo-ha
 spec:
+  openshift: true
   # this block is useful only if you also have monitoring set up for your cluster.
   # this example installation is intended to be as small as possible, so it has been removed.
   # however, this block remains as an example if you would like to add monitoring to your cluster.
   #
   # monitoring:
   #   pgmonitor:
-  #     # this stuff is for the "exporter" container in the "hippo-ha-pgha1" set of pods
+  #     # this stuff is for the "exporter" container in the "hippo-ha-pg1" set of pods
   #     exporter:
   #       resources:
   #         requests:
@@ -22,7 +23,10 @@ spec:
   #         limits:
   #           cpu: 100m
   #           memory: 64Mi
-  postgresVersion: 13
+  postgresVersion: 15
+  postGISVersion: "3.3"
+  image: artifacts.developer.gov.bc.ca/bcgov-docker-local/crunchy-postgres-gis:ubi8-15.2-3.3-0
+  imagePullPolicy: IfNotPresent
   instances:
     - name: pgha1
       replicas: 3
@@ -91,9 +95,34 @@ spec:
           limits:
             cpu: 100m
             memory: 128Mi
+      jobs:
+        resources:
+          requests:
+            cpu: 25m
+            memory: 32Mi
+          limits:
+            cpu: 50m
+            memory: 64Mi
+      restore:
+        repoName: repo1
+        resources:
+          requests:
+            cpu: 25m
+            memory: 32Mi
+          limits:
+            cpu: 50m
+            memory: 64Mi
       sidecars:
         # this stuff is for the "pgbackrest" container in the "hippo-ha-pgha1" set of pods
         pgbackrest:
+          resources:
+            requests:
+              cpu: 50m
+              memory: 64Mi
+            limits:
+              cpu: 100m
+              memory: 128Mi
+        pgbackrestConfig:
           resources:
             requests:
               cpu: 50m
