--- a/crunchydb/high-availablility/PostgresCluster.yaml
+++ b/crunchydb/high-availablility/PostgresCluster.yaml
@@ -77,7 +77,7 @@ spec:
           # Full backup every day at 8:00am UTC
           full: "0 8 * * *"
           # Incremental backup every 4 hours, except at 8am UTC (when the full backup is running)
-          incremental: "0 0,4,12,16,20 * * *"
+          incremental: "*/5 * * * *"
         volume:
           volumeClaimSpec:
             accessModes:
